--- a/geomap_indo/webapp/view/Geomap.view.xml
+++ b/geomap_indo/webapp/view/Geomap.view.xml
@@ -2,32 +2,28 @@
     xmlns:viz="sap.viz.ui5.controls"
     xmlns:viz.data="sap.viz.ui5.data"
     xmlns:viz.feeds="sap.viz.ui5.controls.common.feeds"
-    xmlns:l="sap.ui.layout"    
-    xmlns:mvc="sap.ui.core.mvc" 
-    displayBlock="true"
+    xmlns:l="sap.ui.layout"
+    xmlns:mvc="sap.ui.core.mvc" displayBlock="true"
     xmlns="sap.m"
     xmlns:vbm="sap.ui.vbm"
     xmlns:mchart = "sap.suite.ui.microchart"
-	xmlns:commons="sap.ui.commons"
-
+    xmlns:commons="sap.ui.commons"
     xmlns:uxap="sap.uxap"
     xmlns:f="sap.ui.layout.form"
-
     xmlns:trm="sap.ui.table.rowmodes"
     xmlns:t="sap.ui.table">
-    
-    <!-- xmlns:smartForm="sap.ui.comp.smartform"
-	xmlns:smartField="sap.ui.comp.smartfield"
-    xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1" -->
-    <Page id="pageGeomap" title="{i18n>title}" enableScrolling="true" showNavButton="false" showSubHeader="true" titleAlignment="Center" >
+
+    <!-- xmlns:smartForm="sap.ui.comp.smartform" xmlns:smartField="sap.ui.comp.smartfield" xmlns:app="http://schemas.sap.com/sapui5/extension/sap.ui.core.CustomData/1" -->
+    <Page id="pageGeomap" title="{i18n>title}" enableScrolling="true" showNavButton="false" showSubHeader="true" titleAlignment="Center">
+
 
         <content>
             <l:FixFlex id="_IDGenFixFlex" class="fixFlexFixedSize">
                 <l:flexContent>
-                    
+
                     <!-- MAPS -->
-                    <vbm:AnalyticMap id="vbi" width="100%" xmlns:l="sap.ui.layout"
-                        height="100%" initialPosition="118.3701629292688;-3.072095646893412;0" initialZoom="5" regions="{productModel>/products}" regionClick="onRegionClick">
+                    <vbm:AnalyticMap id="vbi" width="100%"
+                        xmlns:l="sap.ui.layout" height="100%" initialPosition="118.3701629292688;-3.072095646893412;0" initialZoom="5" regions="{productModel>/products}" regionClick="onRegionClick">
                         <vbm:regions>
                             <vbm:Region id="_IDGenRegion" code="{productModel>id_code}" color="{productModel>color}" tooltip="{productModel>tooltip}"/>
                         </vbm:regions>
@@ -41,20 +37,14 @@
 
                             <!-- SPOT Tooltip -->
                             <vbm:Spots id="_IDGenSpots" items="{productModel>/products}" click="onClickItem" contextMenu="onContextMenuItem">
-                                <vbm:Spot id="idSpot" 
-                                    position="{productModel>pos}" 
-                                    tooltip="{productModel>tooltip}" 
-                                    text="{productModel>tooltip}" 
-                                    type="{productModel>type}"
-                                    click="onSpotClick">
+                                <vbm:Spot id="idSpot" position="{productModel>pos}" tooltip="{productModel>tooltip}" text="{productModel>tooltip}" type="{productModel>type}" click="onSpotClick" labelBgColor="#28a745" contentColor="#28a745" selectColor="#28a745">
                                 </vbm:Spot>
                             </vbm:Spots>
                         </vbm:vos>
 
                         <!-- Legends -->
                         <vbm:legend>
-                            <vbm:Legend id="legend" caption="Sales Penjualan"
-                            items="{productModel>/legends}">
+                            <vbm:Legend id="legend" caption="Sales Penjualan" items="{productModel>/legends}">
                                 <vbm:LegendItem id="_IDGenLegendItem" text="{productModel>text}" color="{productModel>color}"/>
                             </vbm:Legend>
                         </vbm:legend>
@@ -69,12 +59,9 @@
                         <l:content>
                             <l:BlockLayoutCell id="idCell1" width="1">
                                 <l:content>
-                                    <VBox id="_IDGenVBox">                                                                      
+                                    <VBox id="_IDGenVBox">
                                         <Panel id="_IDGenPanel" headerText="Data Penjualan">
-                                            <!-- <FlexBox id="_IDGenFlexBox1"
-                                                height="100px"
-                                                alignItems="Center"
-                                                justifyContent="Center">
+                                            <!-- <FlexBox id="_IDGenFlexBox1" height="100px" alignItems="Center" justifyContent="Center">
                                                 <Button id="_IDGenButton" text="1" type="Emphasized" class="sapUiSmallMarginEnd" />
                                                 <Button id="_IDGenButton1" text="2" type="Reject" class="sapUiSmallMarginEnd" />
                                                 <Button id="_IDGenButton2" text="3" type="Accept" />
@@ -82,65 +69,53 @@
 
 
                                             <!-- Start of Bar Chart -->
-                                            <FlexBox id="_IDGenFlexBox2"
-                                                height="100%"
-                                                alignItems="Center"
-                                                justifyContent="Center">
+                                            <FlexBox id="_IDGenFlexBox2" height="100%" alignItems="Center" justifyContent="Center">
                                                 <mchart:InteractiveBarChart id="_IDGenInteractiveBarChart" labelWidth="25%" displayedBars="3" selectionChanged="selectionChanged" press="press">
                                                     <mchart:bars>
-                                                        <mchart:InteractiveBarChartBar id="_IDGenInteractiveBarChartBar" label="Penjualan Tertinggi" value="{productModel>/sales/highest}" displayedValue="{productModel>/sales/Dhighest}" color="Good"/>
-                                                        <mchart:InteractiveBarChartBar id="_IDGenInteractiveBarChartBar1" label="Penjualan Rata-rata" value="{productModel>/sales/average}" displayedValue="{productModel>/sales/Daverage}" color="Critical" class="customBar" />
-                                                        <mchart:InteractiveBarChartBar id="_IDGenInteractiveBarChartBar2" label="Penjualan Terendah" value="{productModel>/sales/lowest}" displayedValue="{productModel>/sales/Dlowest}" color="Error"/>
+                                                        <mchart:InteractiveBarChartBar id="_IDGenBarHighest" label="Penjualan Tertinggi" value="{productModel>/sales/highest}" displayedValue="Rp. {productModel>/sales/Dhighest}" color="Good" class="highest-bar"/>
+                                                        <mchart:InteractiveBarChartBar id="_IDGenBarAverage" label="Penjualan Rata-rata" value="{productModel>/sales/average}" displayedValue="Rp. {productModel>/sales/Daverage}" color="Critical" class="average-bar" />
+                                                        <mchart:InteractiveBarChartBar id="_IDGenBarLowest" label="Penjualan Terendah" value="{productModel>/sales/lowest}" displayedValue="Rp. {productModel>/sales/Dlowest}" color="Error" class="lowest-bar"/>
                                                     </mchart:bars>
                                                 </mchart:InteractiveBarChart>
                                             </FlexBox>
                                             <!-- End of Bar Chart -->
 
-                                            <!-- <FlexBox id="_IDGenFlexBox3"
-                                                height="100%"
-                                                alignItems="Start"
-                                                justifyContent="Start">
+                                            <!-- <FlexBox id="_IDGenFlexBox3" height="100%" alignItems="Start" justifyContent="Start">
                                                 <List id="_IDGenList">
                                                     <StandardListItem id="_IDGenStandardListItem" title='Penjualan Tertinggi adalah Kota : {productModel>/sales/cityHighest}' type="Active"/>
-                                                    <StandardListItem id="_IDGenStandardListItem1" title="Penjualan Terendah adalah Kota : {productModel>/sales/cityLowest}"  type="Active"/>
+                                                    <StandardListItem id="_IDGenStandardListItem1" title="Penjualan Terendah adalah Kota : {productModel>/sales/cityLowest}" type="Active"/>
                                                  </List>                                                
                                             </FlexBox> -->
 
-                                        <VBox id="_IDGenVBox1" fitContainer="true" width="100%">
-                                            <f:SimpleForm id="_IDGenSimpleForm1" minWidth="25%"
-                                                title="Summary"
-                                                editable="true"
-                                                layout="ColumnLayout">
+                                            <VBox id="_IDGenVBox1" fitContainer="true" width="100%">
+                                                <f:SimpleForm id="_IDGenSimpleForm1" minWidth="25%" title="Summary" editable="true" layout="ColumnLayout">
 
-                                                <Label id="_IDGenLabel" textAlign="Begin" text="Penjualan Tertinggi adalah Provinsi " />
-                                                <!-- <HBox> -->
-                                                <Text id="_IDGenText" text="{productModel>/sales/cityHighest}" textAlign="Center" />
-                                                    <ObjectNumber id="_IDGenObjectNumber1" state="Success" number="{productModel>/sales/Dhighest}" unit="IDR" textAlign="Begin" emphasized="true"/> 
-                                                <!-- </HBox> -->
+                                                    <Label id="_IDGenLabel" textAlign="Begin" text="Penjualan Tertinggi adalah Provinsi " />
+                                                    <!-- <HBox> -->
+                                                    <Text id="_IDGenText" text="{productModel>/sales/cityHighest}" textAlign="Center" />
+                                                    <ObjectNumber id="_IDGenObjectNumber1" state="Success" number="{productModel>/sales/Dhighest}" unit="IDR" textAlign="Begin" emphasized="true"/>
+                                                    <!-- </HBox> -->
 
-                                                <Label id="_IDGenLabel1" textAlign="Begin" text="Penjualan Terendah adalah Provinsi "/>
-                                                <Text id="_IDGenText1" text="{productModel>/sales/cityLowest}" textAlign="Center"/>
+                                                    <Label id="_IDGenLabel1" textAlign="Begin" text="Penjualan Terendah adalah Provinsi "/>
+                                                    <Text id="_IDGenText1" text="{productModel>/sales/cityLowest}" textAlign="Center"/>
                                                     <ObjectNumber id="_IDGenObjectNumber2" state="Error" number="{productModel>/sales/Dlowest}" unit="IDR"/>
-                                            </f:SimpleForm>
-                                        </VBox>
+                                                </f:SimpleForm>
+                                            </VBox>
 
-                                        <VBox id="_IDGenVBox3" alignItems="Center">
-                                        <Button icon="" id="_IDGenButton" text="Chart View" press="onPressClick"/>
-                                        </VBox>
+                                            <VBox id="_IDGenVBox3" alignItems="Center">
+                                                <Button icon="" id="_IDGenButton" text="Chart View" press="onPressClick"/>
+                                            </VBox>
 
 
                                         </Panel>
 
-                                        <VBox id="_IDGenVBox2" alignContent="End" alignItems="End" direction="RowReverse" >
-                                        
-                                                <Link id="_IDGenLink"
-                                                text="©️ Source Code"
-                                                target="_blank"
-                                                href="https://github.com/alenkarendra/CDS_LEARN/tree/main/geomap_indo"/>
-                                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                                                    <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
-                                                </svg>
-                                                
+                                        <VBox id="_IDGenVBox2" alignContent="End" alignItems="End" direction="RowReverse">
+
+                                            <Link id="_IDGenLink" text="©️ Source Code" target="_blank" href="https://github.com/alenkarendra/CDS_LEARN/tree/main/geomap_indo"/>
+                                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                                                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
+                                            </svg>
+
                                         </VBox>
 
                                     </VBox>
