--- a/geomap_indo/webapp/view/Geomap.view.xml
+++ b/geomap_indo/webapp/view/Geomap.view.xml
@@ -27,6 +27,8 @@
                         <vbm:regions>
                             <vbm:Region id="_IDGenRegion" code="{productModel>id_code}" color="{productModel>color}" tooltip="{productModel>tooltip}"/>
                         </vbm:regions>
+
+                        <!-- SPOTS -->
                         <vbm:vos>
                             <!-- <vbm:Spots items="{productModel>/products}">
                                 <vbm:Spot position="{productModel>pos}" tooltip="{productModel>tooltip}" type="{productModel>type}">
@@ -35,9 +37,11 @@
                                 </vbm:Spot>
                             </vbm:Spots> -->
 
+                            <!-- type="{productModel>type}" -->
+
                             <!-- SPOT Tooltip -->
                             <vbm:Spots id="_IDGenSpots" items="{productModel>/products}" click="onClickItem" contextMenu="onContextMenuItem">
-                                <vbm:Spot id="idSpot" position="{productModel>pos}" tooltip="{productModel>tooltip}" text="{productModel>tooltip}" type="{productModel>type}" click="onSpotClick" labelBgColor="#28a745" contentColor="#28a745" selectColor="#28a745">
+                                <vbm:Spot id="idSpot" position="{productModel>pos}" tooltip="{productModel>tooltip}" text="{productModel>tooltip}" type="{productModel>type}" click="onSpotClick" >
                                 </vbm:Spot>
                             </vbm:Spots>
                         </vbm:vos>
@@ -106,16 +110,13 @@
                                                 <Button icon="" id="_IDGenButton" text="Chart View" press="onPressClick"/>
                                             </VBox>
 
-
                                         </Panel>
 
                                         <VBox id="_IDGenVBox2" alignContent="End" alignItems="End" direction="RowReverse">
-
                                             <Link id="_IDGenLink" text="©️ Source Code" target="_blank" href="https://github.com/alenkarendra/CDS_LEARN/tree/main/geomap_indo"/>
                                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
                                                 <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"/>
                                             </svg>
-
                                         </VBox>
 
                                     </VBox>
