--- a/geomap_indo/webapp/view/Geomap.view.xml
+++ b/geomap_indo/webapp/view/Geomap.view.xml
@@ -41,7 +41,7 @@
 
                             <!-- SPOT Tooltip -->
                             <vbm:Spots id="_IDGenSpots" items="{productModel>/products}" click="onClickItem" contextMenu="onContextMenuItem">
-                                <vbm:Spot id="idSpot" position="{productModel>pos}" tooltip="{productModel>tooltip}" text="{productModel>tooltip}" type="{productModel>type}" click="onSpotClick" >
+                                <vbm:Spot id="idSpot" position="{productModel>pos}" tooltip="{productModel>tooltip}" text="{productModel>tooltip}" type="{productModel>type}" click="onSpotClick">
                                 </vbm:Spot>
                             </vbm:Spots>
                         </vbm:vos>
@@ -92,7 +92,7 @@
                                             </FlexBox> -->
 
                                             <VBox id="_IDGenVBox1" fitContainer="true" width="100%">
-                                                <f:SimpleForm id="_IDGenSimpleForm1" minWidth="25%" title="Summary" editable="true" layout="ColumnLayout">
+                                                <!-- <f:SimpleForm id="_IDGenSimpleForm1" minWidth="25%" title="Summary" editable="true" layout="ColumnLayout"> -->
 
                                                     <Label id="_IDGenLabel" textAlign="Begin" text="Penjualan Tertinggi adalah Provinsi " />
                                                     <!-- <HBox> -->
@@ -103,11 +103,21 @@
                                                     <Label id="_IDGenLabel1" textAlign="Begin" text="Penjualan Terendah adalah Provinsi "/>
                                                     <Text id="_IDGenText1" text="{productModel>/sales/cityLowest}" textAlign="Center"/>
                                                     <ObjectNumber id="_IDGenObjectNumber2" state="Error" number="{productModel>/sales/Dlowest}" unit="IDR"/>
-                                                </f:SimpleForm>
+
+                                                <FlexBox>
+                                                    <GenericTag text="Project Cost" design="StatusIconHidden" status="Error" class="sapUiSmallMarginBottom">
+                                                        <ObjectNumber state="Error" emphasized="false" number="3.5M" unit="EUR"/>
+                                                    </GenericTag>
+                                                </FlexBox>
+                                                <!-- </f:SimpleForm> -->
                                             </VBox>
 
                                             <VBox id="_IDGenVBox3" alignItems="Center">
                                                 <Button icon="" id="_IDGenButton" text="Chart View" press="onPressClick"/>
+
+                                                <GenericTag text="Project Cost" design="StatusIconHidden" status="Error" class="sapUiSmallMarginBottom">
+                                                    <ObjectNumber state="Error" emphasized="false" number="3.5M" unit="EUR"/>
+                                                </GenericTag>
                                             </VBox>
 
                                         </Panel>
